// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionDisplayMode /> should render correctly 1`] = `
<Uncontrolled(Panel)
  id="display-mode"
>
  <SectionDisplayModestyle__PanelHeader>
    <FormattedMessage
      id="display.mode"
      tagName="h4"
      values={Object {}}
    />
    <a
      className="pull-right link"
      href="https://aide.cap-collectif.com/article/51-creer-un-formulaire-de-depot#affichage"
      rel="noopener noreferrer"
      target="_blank"
    >
      <Icon
        className="mr-5"
        color="#3b88fd"
        name="information"
        size={16}
      />
      <FormattedMessage
        id="global.help"
        values={Object {}}
      />
    </a>
  </SectionDisplayModestyle__PanelHeader>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <FormattedMessage
      id="select.display.mode"
      tagName="p"
      values={Object {}}
    />
    <Field
      component={[Function]}
      hasError={false}
      icon={
        <IconMock
          className="icon-illustration"
        />
      }
      id="list-view"
      label={
        <FormattedMessage
          id="list.view"
          values={Object {}}
        />
      }
      name="viewEnabled.isListViewEnabled"
      tooltip={null}
    />
    <Field
      component={[Function]}
      hasError={false}
      icon={
        <IconMock
          className="icon-illustration"
        />
      }
      id="grid-view"
      label={
        <FormattedMessage
          id="grid.view"
          values={Object {}}
        />
      }
      name="viewEnabled.isGridViewEnabled"
      tooltip={
        Object {
          "content": <Relay(PopoverToggleView)
            proposalForm={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "mapCenter": Object {
                  "json": "[{\\\\\\"formatted_address\\\\\\":\\\\\\"Angers, France\\\\\\",\\\\\\"geometry\\\\\\":{\\\\\\"bounds\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431},\\\\\\"location\\\\\\":{\\\\\\"lat\\\\\\":47.47116159999999,\\\\\\"lng\\\\\\":-0.5518257},\\\\\\"location_type\\\\\\":\\\\\\"APPROXIMATE\\\\\\",\\\\\\"viewport\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431}},\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"],\\\\\\"address_components\\\\\\":[{\\\\\\"long_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_2\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_1\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"France\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"FR\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"country\\\\\\",\\\\\\"political\\\\\\"]}],\\\\\\"place_id\\\\\\":\\\\\\"ChIJnY7lANp4CEgRMJwNHlI3DQQ\\\\\\"}]",
                  "lat": 47.47116,
                  "lng": -0.55182,
                },
                "step": Object {
                  "project": Object {
                    "firstCollectStep": Object {
                      "form": Object {
                        "isGridViewEnabled": true,
                        "isListViewEnabled": false,
                        "isMapViewEnabled": true,
                      },
                    },
                    "steps": Array [
                      Object {
                        "__typename": "CollectStep",
                        "form": Object {
                          "isGridViewEnabled": true,
                          "isListViewEnabled": false,
                          "isMapViewEnabled": true,
                        },
                        "mainView": "GRID",
                      },
                      Object {
                        "__typename": "SelectionStep",
                        "mainView": "MAP",
                      },
                    ],
                  },
                },
                "zoomMap": 20,
              }
            }
            typeView="GRID"
          />,
          "width": "360px",
        }
      }
    />
    <Field
      component={[Function]}
      hasError={false}
      icon={
        <IconMock
          className="icon-illustration"
        />
      }
      id="map-view"
      isOpen={true}
      label={
        <React.Fragment>
          <div>
            <FormattedMessage
              id="map.view"
              values={Object {}}
            />
            <FormattedMessage
              id="map.configuration.zone.longitude.latitude.zoom"
              values={
                Object {
                  "latitude": 48.8534,
                  "longitude": 2.3488,
                  "zone": null,
                  "zoom": undefined,
                }
              }
            />
          </div>
          <SectionDisplayModestyle__ButtonToggleView
            onClick={[Function]}
            type="button"
          >
            <Icon
              color="#3b88fd"
              name="chevron-up"
              size={14}
            />
          </SectionDisplayModestyle__ButtonToggleView>
        </React.Fragment>
      }
      name="viewEnabled.isMapViewEnabled"
      onChange={[Function]}
      tooltip={
        Object {
          "content": <Relay(PopoverToggleView)
            proposalForm={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "mapCenter": Object {
                  "json": "[{\\\\\\"formatted_address\\\\\\":\\\\\\"Angers, France\\\\\\",\\\\\\"geometry\\\\\\":{\\\\\\"bounds\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431},\\\\\\"location\\\\\\":{\\\\\\"lat\\\\\\":47.47116159999999,\\\\\\"lng\\\\\\":-0.5518257},\\\\\\"location_type\\\\\\":\\\\\\"APPROXIMATE\\\\\\",\\\\\\"viewport\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431}},\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"],\\\\\\"address_components\\\\\\":[{\\\\\\"long_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_2\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_1\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"France\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"FR\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"country\\\\\\",\\\\\\"political\\\\\\"]}],\\\\\\"place_id\\\\\\":\\\\\\"ChIJnY7lANp4CEgRMJwNHlI3DQQ\\\\\\"}]",
                  "lat": 47.47116,
                  "lng": -0.55182,
                },
                "step": Object {
                  "project": Object {
                    "firstCollectStep": Object {
                      "form": Object {
                        "isGridViewEnabled": true,
                        "isListViewEnabled": false,
                        "isMapViewEnabled": true,
                      },
                    },
                    "steps": Array [
                      Object {
                        "__typename": "CollectStep",
                        "form": Object {
                          "isGridViewEnabled": true,
                          "isListViewEnabled": false,
                          "isMapViewEnabled": true,
                        },
                        "mainView": "GRID",
                      },
                      Object {
                        "__typename": "SelectionStep",
                        "mainView": "MAP",
                      },
                    ],
                  },
                },
                "zoomMap": 20,
              }
            }
            typeView="MAP"
          />,
          "width": "360px",
        }
      }
    >
      <SectionDisplayModestyle__MapViewContent>
        <FormattedMessage
          id="initial-position-of-the-map"
          tagName="h5"
          values={Object {}}
        />
        <SectionDisplayModestyle__MapContainer>
          <Field
            addressProps={
              Object {
                "getAddress": [Function],
                "getPosition": [Function],
              }
            }
            component={[Function]}
            debounce={1200}
            divClassName="search-address"
            formName="formName"
            id="address"
            name="address"
            placeholder="proposal.map.form.placeholder"
            type="address"
          />
          <MapContainer
            center={
              Array [
                48.8534,
                2.3488,
              ]
            }
            className="map"
            doubleClickZoom={false}
            gestureHandling={true}
            whenCreated={[Function]}
            zoom={10}
            zoomControl={false}
          >
            <CapcoTileLayer />
            <ForwardRef(LeafComponent)
              position="bottomright"
            />
            <ForwardRef(ContainerComponent)
              icon={
                NewClass {
                  "_initHooksCalled": true,
                  "options": Object {
                    "iconAnchor": Array [
                      20,
                      40,
                    ],
                    "iconSize": Array [
                      30,
                      30,
                    ],
                    "iconUrl": "/svg/marker.svg",
                  },
                }
              }
              position={
                Array [
                  48.8534,
                  2.3488,
                ]
              }
            />
          </MapContainer>
          <div
            className="fields"
          >
            <Field
              component={[Function]}
              id="latitude"
              label={
                <FormattedMessage
                  id="admin.fields.proposal_form.latitude"
                  values={Object {}}
                />
              }
              name="mapCenter.lat"
              type="text"
            />
            <Field
              component={[Function]}
              id="longitude"
              label={
                <FormattedMessage
                  id="admin.fields.proposal_form.longitude"
                  values={Object {}}
                />
              }
              name="mapCenter.lng"
              type="text"
            />
            <Field
              component={[Function]}
              id="zoom"
              label={
                <FormattedMessage
                  id="proposal_form.zoom"
                  values={Object {}}
                />
              }
              name="zoomMap"
              normalize={[Function]}
              type="select"
            >
              <option
                key="1"
                value={1}
              >
                1 - map.zoom.world
              </option>
              <option
                key="2"
                value={2}
              >
                2 
              </option>
              <option
                key="3"
                value={3}
              >
                3 
              </option>
              <option
                key="4"
                value={4}
              >
                4 
              </option>
              <option
                key="5"
                value={5}
              >
                5 - map.zoom.mainland
              </option>
              <option
                key="6"
                value={6}
              >
                6 
              </option>
              <option
                key="7"
                value={7}
              >
                7 
              </option>
              <option
                key="8"
                value={8}
              >
                8 
              </option>
              <option
                key="9"
                value={9}
              >
                9 
              </option>
              <option
                key="10"
                value={10}
              >
                10 - map.zoom.city
              </option>
              <option
                key="11"
                value={11}
              >
                11 
              </option>
              <option
                key="12"
                value={12}
              >
                12 
              </option>
              <option
                key="13"
                value={13}
              >
                13 
              </option>
              <option
                key="14"
                value={14}
              >
                14 
              </option>
              <option
                key="15"
                value={15}
              >
                15 - map.zoom.street
              </option>
              <option
                key="16"
                value={16}
              >
                16 
              </option>
              <option
                key="17"
                value={17}
              >
                17 
              </option>
              <option
                key="18"
                value={18}
              >
                18 - map.zoom.building
              </option>
            </Field>
          </div>
        </SectionDisplayModestyle__MapContainer>
      </SectionDisplayModestyle__MapViewContent>
    </Field>
  </PanelBody>
</Uncontrolled(Panel)>
`;

exports[`<SectionDisplayMode /> should render correctly when map view not enabled 1`] = `
<Uncontrolled(Panel)
  id="display-mode"
>
  <SectionDisplayModestyle__PanelHeader>
    <FormattedMessage
      id="display.mode"
      tagName="h4"
      values={Object {}}
    />
    <a
      className="pull-right link"
      href="https://aide.cap-collectif.com/article/51-creer-un-formulaire-de-depot#affichage"
      rel="noopener noreferrer"
      target="_blank"
    >
      <Icon
        className="mr-5"
        color="#3b88fd"
        name="information"
        size={16}
      />
      <FormattedMessage
        id="global.help"
        values={Object {}}
      />
    </a>
  </SectionDisplayModestyle__PanelHeader>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <FormattedMessage
      id="select.display.mode"
      tagName="p"
      values={Object {}}
    />
    <Field
      component={[Function]}
      hasError={false}
      icon={
        <IconMock
          className="icon-illustration"
        />
      }
      id="list-view"
      label={
        <FormattedMessage
          id="list.view"
          values={Object {}}
        />
      }
      name="viewEnabled.isListViewEnabled"
      tooltip={null}
    />
    <Field
      component={[Function]}
      hasError={false}
      icon={
        <IconMock
          className="icon-illustration"
        />
      }
      id="grid-view"
      label={
        <FormattedMessage
          id="grid.view"
          values={Object {}}
        />
      }
      name="viewEnabled.isGridViewEnabled"
      tooltip={
        Object {
          "content": <Relay(PopoverToggleView)
            proposalForm={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "mapCenter": Object {
                  "json": "[{\\\\\\"formatted_address\\\\\\":\\\\\\"Angers, France\\\\\\",\\\\\\"geometry\\\\\\":{\\\\\\"bounds\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431},\\\\\\"location\\\\\\":{\\\\\\"lat\\\\\\":47.47116159999999,\\\\\\"lng\\\\\\":-0.5518257},\\\\\\"location_type\\\\\\":\\\\\\"APPROXIMATE\\\\\\",\\\\\\"viewport\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431}},\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"],\\\\\\"address_components\\\\\\":[{\\\\\\"long_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_2\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_1\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"France\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"FR\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"country\\\\\\",\\\\\\"political\\\\\\"]}],\\\\\\"place_id\\\\\\":\\\\\\"ChIJnY7lANp4CEgRMJwNHlI3DQQ\\\\\\"}]",
                  "lat": 47.47116,
                  "lng": -0.55182,
                },
                "step": Object {
                  "project": Object {
                    "firstCollectStep": Object {
                      "form": Object {
                        "isGridViewEnabled": true,
                        "isListViewEnabled": false,
                        "isMapViewEnabled": true,
                      },
                    },
                    "steps": Array [
                      Object {
                        "__typename": "CollectStep",
                        "form": Object {
                          "isGridViewEnabled": true,
                          "isListViewEnabled": false,
                          "isMapViewEnabled": true,
                        },
                        "mainView": "GRID",
                      },
                      Object {
                        "__typename": "SelectionStep",
                        "mainView": "MAP",
                      },
                    ],
                  },
                },
                "zoomMap": 20,
              }
            }
            typeView="GRID"
          />,
          "width": "360px",
        }
      }
    />
    <Field
      component={[Function]}
      hasError={false}
      icon={
        <IconMock
          className="icon-illustration"
        />
      }
      id="map-view"
      isOpen={false}
      label={
        <React.Fragment>
          <div>
            <FormattedMessage
              id="map.view"
              values={Object {}}
            />
          </div>
        </React.Fragment>
      }
      name="viewEnabled.isMapViewEnabled"
      onChange={[Function]}
      tooltip={
        Object {
          "content": <Relay(PopoverToggleView)
            proposalForm={
              Object {
                "$fragmentRefs": null,
                "$refType": null,
                "mapCenter": Object {
                  "json": "[{\\\\\\"formatted_address\\\\\\":\\\\\\"Angers, France\\\\\\",\\\\\\"geometry\\\\\\":{\\\\\\"bounds\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431},\\\\\\"location\\\\\\":{\\\\\\"lat\\\\\\":47.47116159999999,\\\\\\"lng\\\\\\":-0.5518257},\\\\\\"location_type\\\\\\":\\\\\\"APPROXIMATE\\\\\\",\\\\\\"viewport\\\\\\":{\\\\\\"south\\\\\\":47.4374,\\\\\\"west\\\\\\":-0.6177264,\\\\\\"north\\\\\\":47.526392,\\\\\\"east\\\\\\":-0.5081431}},\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"],\\\\\\"address_components\\\\\\":[{\\\\\\"long_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Angers\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"locality\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Maine-et-Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_2\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"Pays de la Loire\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"administrative_area_level_1\\\\\\",\\\\\\"political\\\\\\"]},{\\\\\\"long_name\\\\\\":\\\\\\"France\\\\\\",\\\\\\"short_name\\\\\\":\\\\\\"FR\\\\\\",\\\\\\"types\\\\\\":[\\\\\\"country\\\\\\",\\\\\\"political\\\\\\"]}],\\\\\\"place_id\\\\\\":\\\\\\"ChIJnY7lANp4CEgRMJwNHlI3DQQ\\\\\\"}]",
                  "lat": 47.47116,
                  "lng": -0.55182,
                },
                "step": Object {
                  "project": Object {
                    "firstCollectStep": Object {
                      "form": Object {
                        "isGridViewEnabled": true,
                        "isListViewEnabled": false,
                        "isMapViewEnabled": true,
                      },
                    },
                    "steps": Array [
                      Object {
                        "__typename": "CollectStep",
                        "form": Object {
                          "isGridViewEnabled": true,
                          "isListViewEnabled": false,
                          "isMapViewEnabled": true,
                        },
                        "mainView": "GRID",
                      },
                      Object {
                        "__typename": "SelectionStep",
                        "mainView": "MAP",
                      },
                    ],
                  },
                },
                "zoomMap": 20,
              }
            }
            typeView="MAP"
          />,
          "width": "360px",
        }
      }
    />
  </PanelBody>
</Uncontrolled(Panel)>
`;
